--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,11 @@ version: "3"
 services:
   ruby:
     image: rguidpost
-    build: .
+    build:
+      context: .
+      args:
+        GIT_EMAIL: $GIT_EMAIL
+        GIT_NAME: $GIT_NAME
     command: /bin/bash
     volumes:
       - .:/app
